--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dicebear/collection": "^9.2.3",
     "@dicebear/core": "^9.2.3",
     "@hookform/resolvers": "^5.1.1",
+    "@inngest/agent-kit": "^0.9.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -44,7 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@stream-io/node-sdk": "^0.5.1",
-    "@stream-io/openai-realtime-api": "^0.3.3",
+    "@stream-io/openai-realtime-api": "~0.1.3",
     "@stream-io/video-react-sdk": "^1.19.3",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-table": "^8.21.3",
@@ -52,6 +53,7 @@
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
     "better-auth": "^1.2.8",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -61,7 +63,9 @@
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
     "humanize-duration": "^3.33.0",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
+    "jsonl-parse-stringify": "^1.0.3",
     "lucide-react": "^0.525.0",
     "nanoid": "^5.1.5",
     "next": "15.2.5",
@@ -78,6 +82,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "utf-8-validate": "^6.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.25.7"
   },
